--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ preferences:
 encoding: utf-8
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: null
 plugins:
   - jekyll-feed 
   - jekyll-sitemap 
